Fri Nov 19 21:07:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: shell completion support for zsh.  based on
	  <http://d.hatena.ne.jp/rubikitch/20071002/zshcomplete>

	* lib/optparse.rb: shell completion support for bash.

Fri Nov 19 00:00:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (SCRIPTPROGRAMS): no needs on cygwin.

	* win32/Makefile.sub (scriptbin): create script binaries.

Thu Nov 18 23:21:23 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	REXML::Formatters::Pretty#wrap used a recursive method call to
	format text.  This switches it to use an iterative approach.
	[ruby-core:33245]
	Patch by Jeremy Evans. Thanks!!!

	* test/rexml/test_core.rb: add a test for it.

Thu Nov 18 22:58:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h (rb_io_buffer_t): extract from rb_io_t.

Thu Nov 18 07:37:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (reconfig): force reconfigure with previous options.

	* common.mk (showconfig): show configure flags, like as
	  `config.status --config' generated by recent autoconf.

Thu Nov 18 07:16:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/langinfo.c (strncasecmp): get rid of redefinition.

Thu Nov 18 00:02:17 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding with ASCII content 
	  as needed.  [ruby-core:33229]

Wed Nov 17 23:19:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat: remove quotes from arguments to be quoted.

	* lib/mkmf.rb (create_makefile): use forward slashes in messages.

	* lib/mkmf.rb (create_makefile): make extension libraries messages
	  brief.

	* win32/Makefile.sub (MAKEDIRS): should not include silent flag.

	* common.mk (ext/ripper/ripper.c, ext/json/parser/parser.c): pass
	  Q and ECHO.  [ruby-core:33226]

Wed Nov 17 16:09:52 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
